RESOLVED FIXED270098
[WGSL] shader,validation,parse,align:parsing:* is failing
https://bugs.webkit.org/show_bug.cgi?id=270098
Summary [WGSL] shader,validation,parse,align:parsing:* is failing
Tadeu Zagallo
Reported 2024-02-26 09:59:07 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-26 09:59:17 PST
Tadeu Zagallo
Comment 2 2024-02-26 10:01:01 PST
EWS
Comment 3 2024-02-27 01:58:17 PST
Committed 275374@main (7c4f60e281a8): <https://commits.webkit.org/275374@main> Reviewed commits have been landed. Closing PR #25111 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.