[WGSL] shader,validation,parse,align:parsing:* is failing https://bugs.webkit.org/show_bug.cgi?id=270098 rdar://123638061

Reviewed by Mike Wyrzykowski.

There two bugs in the validation of `@align`:
- the value has to be bigger than 0, but we allowed 0 before.
- the constant values of attributes were not being concretized

* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::check):

Canonical link: https://commits.webkit.org/275374@main